hide messages scrollbar style the Bubbles section time in threads is now displayed correctly

--- a/src/modules/Chat/components/Bubbles/Bubbles.scss
+++ b/src/modules/Chat/components/Bubbles/Bubbles.scss
@@ -2,11 +2,18 @@
   color: #fff;
   display: flex;
   flex: 1;
-  flex-direction: column;
+  flex-direction: column-reverse;
   align-items: center;
   width: 100%;
 }
 
 .--scrollable {
   overflow-y: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.--scrollable::-webkit-scrollbar {
+  width: 0;
+  height: 0;
 }
